Added a salesforce integration (very basic) and an attempt to add Jira integration (canceled by some circumstances but I'd like to maintain it in the code for future references).

--- a/FormsCreator/Views/Form/EditForm.cshtml
+++ b/FormsCreator/Views/Form/EditForm.cshtml
@@ -129,7 +129,7 @@
                         }
                     </ul>
                 </div><br />
-                <button class="btn btn-primary" type="submit">Enviar</button>
+                <button class="btn btn-primary" type="submit">@WebResources.SimpleWordSubmit</button>
             </form>
         </div>
     </section>
