--- a/FormsCreator/Views/Home/Index.cshtml
+++ b/FormsCreator/Views/Home/Index.cshtml
@@ -45,7 +45,7 @@
 
                     <p class="text-white">@WebResources.HomeIndexMainSubtitle</p>
 
-                    <a href="#section_2" class="btn custom-btn smoothscroll mt-3">@WebResources.HomeIndexButtonStart</a>
+                    <a asp-controller="Template" asp-action="Create" class="btn custom-btn smoothscroll mt-3">@WebResources.HomeIndexButtonStart</a>
                 </div>
 
                 <div class="owl-carousel owl-theme">
