--- a/FormsCreator/Views/Template/Templates.cshtml
+++ b/FormsCreator/Views/Template/Templates.cshtml
@@ -61,7 +61,7 @@
                         <div class="">
                             <div class="custom-block-icon-wrap">
                                 <div class="section-overlay"></div>
-                                <a href="detail-page.html" class="custom-block-image-wrap">
+                                <a href="javascript:void(0)" class="custom-block-image-wrap">
                                     <img src="@item.Image_Url" class="custom-block-image img-fluid" alt="@item.Title">
                                 </a>
                             </div>
@@ -93,7 +93,7 @@
                         <div class="custom-block-info">
 
                             <h5 class="mb-2">
-                                <a href="detail-page.html">
+                                <a href="javascript:void(0)">
                                     @item.Title
                                 </a>
                             </h5>
