--- a/FormsCreator/Views/Form/MyForms.cshtml
+++ b/FormsCreator/Views/Form/MyForms.cshtml
@@ -24,7 +24,7 @@
                         <div class="">
                             <div class="custom-block-icon-wrap">
                                 <div class="section-overlay"></div>
-                                <a href="detail-page.html" class="custom-block-image-wrap">
+                                <a href="javascript:void(0)" class="custom-block-image-wrap">
                                     <img src="@item.Template.Image_Url" class="custom-block-image img-fluid" alt="@item.Template.Title">
                                 </a>
                             </div>
@@ -38,7 +38,7 @@
                         <div class="custom-block-info">
 
                             <h5 class="mb-2">
-                                <a href="detail-page.html">
+                                <a href="javascript:void(0)">
                                     @item.Template.Title
                                 </a>
                             </h5>
