--- a/FormsCreator/Views/Template/MyTemplates.cshtml
+++ b/FormsCreator/Views/Template/MyTemplates.cshtml
@@ -31,7 +31,7 @@
                     <div class="">
                         <div class="custom-block-icon-wrap">
                             <div class="section-overlay"></div>
-                            <a href="detail-page.html" class="custom-block-image-wrap">
+                            <a href="javascript:void(0)" class="custom-block-image-wrap">
                                 <img src="@item.Image_Url" class="custom-block-image img-fluid" alt="@item.Title">
                             </a>
                         </div>
@@ -58,7 +58,7 @@
                     <div class="custom-block-info">
 
                         <h5 class="mb-2">
-                            <a href="detail-page.html">
+                            <a href="javascript:void(0)">
                                 @item.Title
                             </a>
                         </h5>
